--- a/src/core/BUILD
+++ b/src/core/BUILD
@@ -174,6 +174,7 @@ cc_library(
         ":dynamic_batch_scheduler",
         ":infer_header",
         ":logging",
+        ":stream_batch_scheduler",
         ":utils",
         "@com_github_libevent_libevent//:libevent",
         "@org_tensorflow//tensorflow/core:lib",
@@ -263,6 +264,24 @@ cc_library(
         ":constants",
         ":infer_header",
         ":logging",
+        ":model_config",
+        ":model_config_proto",
+        ":scheduler",
+        ":server_status_header",
+        "@org_tensorflow//tensorflow/c:c_api",
+        "@org_tensorflow//tensorflow/core:lib",
+    ],
+)
+
+cc_library(
+    name = "stream_batch_scheduler",
+    srcs = ["stream_batch_scheduler.cc"],
+    hdrs = ["stream_batch_scheduler.h"],
+    deps = [
+        ":constants",
+        ":infer_header",
+        ":logging",
+        ":model_config",
         ":model_config_proto",
         ":scheduler",
         ":server_status_header",
